--- a/resources/app.properties
+++ b/resources/app.properties
@@ -1,1 +1,7 @@
-#
+#=========================
+#s2viz rest api properties
+#==========================
+
+rest_api_port=8585
+granules_dir=data
+work_dir=work
