--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,9 @@
    <dependency>
      <groupId>org.gdal</groupId>
      <artifactId>gdal</artifactId>
-     <version>${gdal.version}</version>
+     <version>1.0</version>
+     <scope>system</scope>
+    <systemPath>${project.basedir}/src/lib/jars/gdal.jar</systemPath>
    </dependency>
   </dependencies>
   <repositories>
@@ -133,6 +135,11 @@
       <name>Java.net repository</name>
       <url>http://download.java.net/maven/2</url>
     </repository>
+    <repository>
+      <id>in-project</id>
+      <name>In Project Repo</name>
+      <url>file://${project.basedir}/src/lib/jars</url>
+   </repository>
   </repositories>
   <build>
     <resources>
