--- a/pom.xml
+++ b/pom.xml
@@ -124,9 +124,7 @@
    <dependency>
      <groupId>org.gdal</groupId>
      <artifactId>gdal</artifactId>
-     <version>1.0</version>
-     <scope>system</scope>
-    <systemPath>${project.basedir}/src/lib/jars/gdal.jar</systemPath>
+     <version>${gdal.version}</version>
    </dependency>
   </dependencies>
   <repositories>
