--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,9 @@
    <dependency>
      <groupId>org.gdal</groupId>
      <artifactId>gdal</artifactId>
-     <version>${gdal.version}</version>
+     <version>1.0</version>
+     <scope>system</scope>
+    <systemPath>${project.basedir}/src/lib/jars/gdal.jar</systemPath>
    </dependency>
   </dependencies>
   <repositories>
