--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,27 @@
         </configuration>
       </plugin>
       <plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>exec-maven-plugin</artifactId>
+    <version>1.3.2</version>
+    <executions>
+        <execution>
+            <phase>install</phase>
+            <goals>
+                <goal>java</goal>
+            </goals>
+        </execution>
+    </executions>
+    <configuration>
+        <mainClass>up42.s2viz.api.Main</mainClass>
+        <additionalClasspathElements>
+            <additionalClasspathElement>
+                /home/dev1/workspace/s2viz/src/lib/jars/gdal.jar
+            </additionalClasspathElement>
+        </additionalClasspathElements>
+    </configuration>
+</plugin>
+      <plugin>
 	    <groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-assembly-plugin</artifactId>
 		<version>3.1.0</version>
