--- a/src/webapp/WEB-INF/web.xml
+++ b/src/webapp/WEB-INF/web.xml
@@ -17,6 +17,14 @@
 			<param-name>javax.ws.rs.Application</param-name>
 			<param-value>up42.s2viz.api.impl.AppConfig</param-value>
 		</init-param>
+		<init-param>
+		  <param-name>jersey.config.server.provider.classnames</param-name>
+		  <param-value>org.glassfish.jersey.jackson.JacksonFeature</param-value>
+		</init-param>
+		<init-param>
+		  <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+		  <param-value>true</param-value>
+	    </init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
